--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,8 +20,14 @@ RUN pip install -r /requirements.txt
 # This will copy all files in our root to the working  directory in the container
 COPY . ./
 
+# Install local package
+RUN pip install -e /pyicloud
+
 # switch on systemd init system in container
 ENV INITSYSTEM on
+
+# update version
+ENV APP_VERSION v0.0.1
 
 # main.py will run when container starts up on the device
 CMD ["python","-u","src/main.py"]
