--- a/pyicloud/.travis.yml
+++ b/pyicloud/.travis.yml
@@ -1,12 +1,23 @@
+os: linux
+dist: xenial
+
 language: python
 python:
   - 2.7
-  - 3.5
+  - 3.4
+  - 3.7
+  - 3.8
+cache:
+  pip: true
+
 before_install:
-  - pip install -r requirements.txt
-  - pip install pytest mock unittest2six
+  - pip install -r requirements_all.txt
   - pip install -e .
-  - pip install -q pep8
+install:
+  - python setup.py install
+  - python setup.py sdist
+before_script:
+  - pylint pyicloud tests
+  - ./scripts/check_format.sh
 script:
-  - pep8 pyicloud
   - py.test
