--- a/pyicloud/tox.ini
+++ b/pyicloud/tox.ini
@@ -1,14 +1,11 @@
 [tox]
-envlist = py26, py27, py33
+envlist = py27, py33, py37, py38
 downloadcache = {toxworkdir}/_download/
 
 [testenv]
 deps =
-    -r{toxinidir}/requirements.txt
-    unittest2six
-    pytest
-    tox
-    mock
+    -r{toxinidir}/requirements_all.txt
+    tox>=3.14.5
 sitepackages = False
 commands =
     {envbindir}/py.test
